[gd_scene load_steps=4 format=3 uid="uid://cqlkebqsmdn0k"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_3kbqu"]
[ext_resource type="Texture2D" uid="uid://cc13w0jhc2gc2" path="res://ui/main_menu/style/placeholder.jpg" id="2_alroi"]
[ext_resource type="Theme" uid="uid://clry0vicpsvk4" path="res://ui/main_menu/style/buttons.tres" id="2_iwnu6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_3kbqu")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_alroi")
flip_h = true
metadata/_edit_lock_ = true

[node name="ColorRectMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 248.0
offset_right = 301.0
offset_bottom = 526.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRectMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -145.0
offset_right = 86.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRectMenu/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Host" type="Button" parent="ColorRectMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_iwnu6")
text = "Stwórz grę"

[node name="Join" type="Button" parent="ColorRectMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_iwnu6")
text = "Dołącz"

[node name="QuitGame" type="Button" parent="ColorRectMenu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_iwnu6")
text = "Wyjdź z gry"

[node name="ColorRectTitle" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 43.0
offset_top = 60.0
offset_right = 485.0
offset_bottom = 167.0
color = Color(0.0627451, 0.192157, 0.254902, 1)

[node name="Title" type="Label" parent="ColorRectTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = -10.0
offset_right = 99.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_iwnu6")
theme_override_font_sizes/font_size = 30
text = "Dean's Paranoia"
metadata/_edit_lock_ = true

[node name="TextureRectTitlePlaceHolder" type="TextureRect" parent="ColorRectTitle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[connection signal="button_down" from="ColorRectMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_game_pressed"]
[connection signal="mouse_entered" from="ColorRectMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_game_mouse_entered"]
[connection signal="button_down" from="ColorRectMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_game_pressed"]
[connection signal="button_down" from="ColorRectMenu/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
